# llm-bias-comparative-analysis

./: .gitignore  LICENSE  README.md  abstract.md  auto_canonical_map.json  project_log.md  pyproject.toml
data/generated_functions_grok/: task_0_generated.json  task_100_generated.json  task_101_generated.json  task_102_generated.json  task_103_generated.json  task_104_generated.json  task_105_generated.json  task_106_generated.json  task_107_generated.json  task_108_generated.json  task_109_generated.json  task_10_generated.json  task_110_generated.json  task_111_generated.json  task_112_generated.json  task_113_generated.json  task_114_generated.json  task_115_generated.json  task_116_generated.json  task_117_generated.json  task_118_generated.json  task_119_generated.json  task_11_generated.json  task_120_generated.json  task_121_generated.json  task_122_generated.json  task_123_generated.json  task_124_generated.json  task_125_generated.json  task_126_generated.json  task_127_generated.json  task_128_generated.json  task_129_generated.json  task_12_generated.json  task_130_generated.json  task_131_generated.json  task_132_generated.json  task_133_generated.json  task_134_generated.json  task_135_generated.json  (+303 more)
data/generated_functions_old/: task_0_generated.json  task_100_generated.json  task_101_generated.json  task_102_generated.json  task_103_generated.json  task_104_generated.json  (+337 more)
src/: analyze_results.py  extract_protected_bias.py  generate_functions.py  generate_functions_grok.py  generate_unified_dataset.py  run_audit_dynamic.py  run_audit_dynamic_legacy.py
(+342 files in other folders)
